# surrogate_repo

./: CMakeLists.txt  README.md  build_tool.sh
include/: .gitignore  soem_install_tool.sh
include/SharedMemory/: shared_memory.h
include/gRPC/: CMakeLists.txt  grpc_cpp_build_tool.sh  grpc_python_build_tool.sh
include/gRPC/cpp/: CMakeLists.txt  custom_client.cc  custom_grpc_service.cpp  custom_grpc_service.h  custom_request_message.h  custom_server.cpp  custom_server.h
include/gRPC/cpp/cmake/: common.cmake
include/gRPC/cpp/proto_generated/: control.grpc.pb.cc  control.grpc.pb.h  control.pb.cc  control.pb.h  motion.grpc.pb.cc  motion.grpc.pb.h  motion.pb.cc  motion.pb.h  msgs_common.grpc.pb.cc  msgs_common.grpc.pb.h  msgs_common.pb.cc  msgs_common.pb.h  msgs_config.grpc.pb.cc  msgs_config.grpc.pb.h  msgs_config.pb.cc  msgs_config.pb.h  msgs_control.grpc.pb.cc  msgs_control.grpc.pb.h  msgs_control.pb.cc  msgs_control.pb.h  msgs_motion.grpc.pb.cc  msgs_motion.grpc.pb.h  msgs_motion.pb.cc  msgs_motion.pb.h  msgs_system.grpc.pb.cc  msgs_system.grpc.pb.h  msgs_system.pb.cc  msgs_system.pb.h  system.grpc.pb.cc  system.grpc.pb.h  system.pb.cc  system.pb.h
include/gRPC/protos/: control.proto  motion.proto  msgs_common.proto  msgs_config.proto  msgs_control.proto  msgs_motion.proto  msgs_system.proto  system.proto
include/gRPC/python/: Qt5_client.py  custom_client.py  requirements.txt
include/gRPC/python/proto_generated/: control_pb2.py  control_pb2.pyi  control_pb2_grpc.py  motion_pb2.py  motion_pb2.pyi  motion_pb2_grpc.py  msgs_common_pb2.py  msgs_common_pb2.pyi  msgs_common_pb2_grpc.py  msgs_config_pb2.py  msgs_config_pb2.pyi  msgs_config_pb2_grpc.py  msgs_control_pb2.py  msgs_control_pb2.pyi  msgs_control_pb2_grpc.py  msgs_motion_pb2.py  msgs_motion_pb2.pyi  msgs_motion_pb2_grpc.py  msgs_system_pb2.py  msgs_system_pb2.pyi  msgs_system_pb2_grpc.py  system_pb2.py  system_pb2.pyi  system_pb2_grpc.py
src/Test_Balancer/: CMakeLists.txt
src/Test_Balancer/src/: CustomBalancer.cpp  CustomBalancer.h  Test_Balancer.cpp  Test_Balancer.h
src/Test_Dynamixel/: CMakeLists.txt
src/Test_Dynamixel/src/: CustomDynamixel.cpp  CustomDynamixel.h  EL6021.cpp  EL6021.h  Test_Dynamixel.cpp  Test_Dynamixel.h
src/Test_Wheel/: CMakeLists.txt
src/Test_Wheel/src/: Test_Wheel.cpp  Test_Wheel.h
src/Test_Wheel/utils/CustomECAT/: CustomEtherCAT.cpp  CustomEtherCAT.h  PDO.h
src/example_xenomai/: CMakeLists.txt
src/example_xenomai/src/: hello_grpc.cpp  hello_grpc.h  hello_rt_task.cpp  hello_rt_task.h  hello_xenomai.cpp  hello_xenomai.h
src/test_integration/: CMakeLists.txt
src/test_integration/src/: MarchSurrogate.cpp  MarchSurrogate.h  test_integration.cpp  test_integration.h
